<resources>
    <string name="app_name">SatSports247</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="msg_please_enter_username">Please enter username.</string>
    <string name="msg_please_enter_password">Please enter password.</string>
    <string name="terms_condition">1. If you not accept this agreement do not place any bet.\n\n2. Cheating bets deleted automatically or manual. No Claim.\n\n3. Admin decision is final and no claim on it.\n\n4. Batsman Runs (In-Play) Over/Under (back/lay) runs bets will stand after batsman has faced one ball or is given out before first ball is faced. Score counts if batsman is Not-Out including if innings is declared. In case of rain, match abandoned etc. settled bets will be valid.
\n\n5. Current/Next Innings Runs Odd/Even Extras and Penalty runs will be included for settlement purposes.
\n\n6. Runs at Fall of 1st Wicket At least one delivery must be bowled, if no wickets fall bets will be void unless settlement is already determined.
\n\n7. Runs at Fall of Next Wicket The total innings runs scored by a team before the fall of the specified wicket determines the result of the market. If a team declares or reaches their target then the total amassed will be the result of the market. Bets will be void should no more play take place following the intervention of rain, or any other delay, as the ability to reach previous quotes offered will have been removed . In case of rain, match abandoned etc. settled bets will be valid.
\n\n8. We do not accept manual bet.
\n\n9. In case of cheating and betting in unfair rates we will cancel the bet even after settling.
\n\n10. Local fancy are based on Haar - Jeet.
\n\n11. Incomplete session will be cancelled but complete session will be settled.
\n\n12. In case of match abandoned, cancelled, no result etc. completed sessions will be settled.
\n\n13. In case of a Tie match,match odds bets are cancelled but only settled and completed session ,fancy are valid
\n\n14. Lambi Paari : In 20-20 match entire twenty overs should be bowled, in case of rain or any delay if even one over is deducted the bets will be cancelled. In One Day match entire 50 overs should be bowled, in case of rain or any delay if even one over is deducted the bets will be cancelled.
\n\n15. Advance Session,Lambi 1`st Inning Valid Only
\n\n16. Total Match Four ,Total Match Siixes,Total Match Runs,Total Match Wides,Total Match Wicket. If Over Gets Less Then All BET Will Cancel This Rule For Limited Over Matches Like 20 Overs And 50 Overs Game
\n\n17. 1st Over Total Runs Prices will be offered for the total runs scored during the 1st over of the match. Extras and penalty runs will be included. The over must be completed for bets to stand unless settlement is already determined.
\n\n18. Limited Overs Matches - Individual Batsmen Runs or Partnerships In a limited overs match where an individual batsman or partnership runs are traded in-play and the innings is curtailed or subject to any reduction in overs, then these markets will be settled at the midpoint of the last available quote before the overs were reduced. If the innings resumes at a later time, a new market may be formed. If a client wants a position in the new market they are required to place a new trade. If there are any subsequent reductions in overs, exactly the same rules will continue to apply i.e. the market is settled at the midpoint of the last available quote before the overs were reduced and a new market may be formed.
\n\n19. Test Matches - Individual Batsmen Runs / Partnerships All bets, open or closed, on an individual batsman or partnership runs shall be void if 50 full overs are not bowled unless one team has won, is dismissed or declares prior to that point. Bets on partnership totals make up when the next wicket falls. If a batsman in the relevant partnership retires hurt, the partnership is treated as continuing between the remaining batsman and the batsman who comes to the wicket. A partnership is also treated as being ended by the end of an innings.
\n\n20. Due to any technical issue software not work properly at that time we are not responsible for any loss.</string>
    <string name="accept">Accept</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_here">Register Here</string>
    <string name="stay_connected">Stay Connected</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="let_s_get_started">Let\'s get started</string>
    <string name="after_login_you_can_change_the_language_from_settings_menu_in_navigation">After login you can change the language from settings menu in navigation.</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="select_your_language">Select your language</string>
    <string name="please_select_a_language_that_you_can_read_and_understand_comfortably">Please select a language that you can read and understand comfortably.</string>
    <string name="please_select_one_lang">Please select one language</string>
    <string name="welcome">Welcome,</string>
    <string name="home">Home</string>
    <string name="in_play">In Play</string>
    <string name="sports">Sports</string>
    <string name="multi_market">Multi-Market</string>
    <string name="my_account">My Account</string>
    <string name="email_address">Email Address</string>
    <string name="liability">Liability</string>
    <string name="stake_limit">Stake Limit :</string>
    <string name="max_profit">Max Profit :</string>
    <string name="cancel">Cancel</string>
    <string name="place_bet">Place Bet</string>
    <string name="please_check_internet_connection">Please check your internet connection</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="markets">Markets</string>
    <string name="matched">Matched</string>
    <string name="unmatched">Unmatched</string>
    <string name="crick_info">Crick Info</string>
    <string name="chips">Chips</string>
    <string name="statement">Statement</string>
    <string name="profit_loss">Profit &amp; Loss</string>
    <string name="results">Results</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="comments">Comments</string>
    <string name="poll">Poll</string>
    <string name="faqs">FAQS</string>
    <string name="about_us">About Us</string>
    <string name="balance">Balance</string>
    <string name="welcome_to_our_website">Welcome to our website</string>
    <string name="total_liability">Total Liability</string>
    <string name="please_enter_valid_rate">Please enter valid rate</string>
    <string name="please_enter_valid_stake">Please enter valid stake</string>
    <string name="stake_must_greater">Stake must be greater than min stake value</string>
    <string name="stake_must_be_less">Stake must be less than max stake value</string>
    <string name="you_have_reached_max_profit_limit">You have reached your max profit limit</string>
    <string name="profile">Profile</string>
    <string name="save">Save</string>
    <string name="branch_ifsc">Branch IFSC</string>
    <string name="bank_name">Bank Name</string>
    <string name="account_holder_name">Account Holder Name</string>
    <string name="bank_account_no">Bank Account No.</string>
    <string name="type">Type</string>
    <string name="sport_game">Sport/Game</string>
    <string name="description">Description</string>
    <string name="dr">DR</string>
    <string name="cr">CR</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="re_enter_new_password">Re Enter New Password</string>
    <string name="please_enter_old_pass">Please enter Old Password.</string>
    <string name="please_enter_new_pass">Please enter New Password.</string>
    <string name="please_enter_new_pass_again">Please enter New Password Again.</string>
    <string name="pass_not_match">Password does not match.</string>
    <string name="pass_greater_than_4">Password must be greater than 4 characters.</string>
    <string name="please_enter_username">Please enter username.</string>
    <string name="please_enter_mobile_number">Please enter mobile number.</string>
    <string name="please_enter_valid_mobile">Please enter valid mobile number.</string>
    <string name="please_enter_valid_email">Please enter valid email address.</string>
    <string name="please_enter_pass">Please enter Password.</string>
    <string name="please_enter_pass_again">PLease enter Password Again.</string>
    <string name="withdraw">Withdraw</string>
    <string name="submit">Submit</string>
    <string name="deposit">Deposit</string>
    <string name="amount">Amount :</string>
    <string name="enter_withdrawal_amount">Enter Withdrawal Amount</string>
    <string name="withdraw_request">Withdraw Request</string>
    <string name="p_l">P&amp;L</string>
    <string name="result">Result</string>
    <string name="market">Market</string>
    <string name="no_matches_found">No Matches Found</string>
    <string name="no_data_found">No Data Found</string>
    <string name="suspended">Suspended</string>
    <string name="ball_started">Ball Started</string>
    <string name="chip_name">Chip Name</string>
    <string name="chip_value">Chip Value</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="please_enter_amount">Please enter amount</string>
    <string name="enter_email_from_profile">Please update you email address from Profile update.</string>
    <string name="enter_mobile_from_profile">Please update you mobile number from Profile update.</string>
    <string name="closed">Closed</string>
    <string name="back">Back</string>
    <string name="lay">Lay</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure_want_to_logout">Are you sure you want to Logout ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="unlimited">Unlimited</string>
    <string name="ok">Ok</string>
    <string name="failure">Failure</string>
    <string name="cannot_open_this_game">Cannot open this game.</string>
    <string name="no_more_data_found">No more data found</string>
    <string name="market_type">Market Type</string>
    <string name="market_name">Market Name</string>
    <string name="yes_l">Yes(L)</string>
    <string name="no_k">No(K)</string>
    <string name="no_bet_placed_yet">No bet placed yet.</string>
    <string name="innings_2">2nd Innings</string>
    <string name="innings_1">1st Innings</string>
    <string name="reload_data">Reload Data</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="v">V</string>
    <string name="time_zone">Time zone :</string>
    <string name="select_sport_game">Select Sport/Games</string>
    <string name="select_tournament">Select Tournament</string>
    <string name="select_match">Select Match</string>
    <string name="select_market">Select Market</string>
    <string name="book_maker">Book Maker</string>
    <string name="selection">Selection</string>
    <string name="placed">Placed:</string>
    <string name="pl">P|L</string>
    <string name="won_loss">Won/Loss</string>
    <string name="run">Run</string>
    <string name="stake">Stake</string>
    <string name="rate">Rate</string>
    <string name="odds">Odds</string>
    <string name="net">Net</string>
    <string name="runs">Runs</string>
</resources>