<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_market_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/_10sdp"
        android:visibility="gone"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_5sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_5sdp"
            android:text="@string/market_name"
            android:textSize="@dimen/_10sdp" />

        <TextView
            android:id="@+id/tv_market_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:maxLines="2"
            android:textColor="@color/bgColor"
            android:textSize="@dimen/_10sdp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/_10sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingEnd="@dimen/_5sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_5sdp"
            android:text="@string/placed"
            android:textSize="@dimen/_10sdp" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:textColor="@color/bgColor"
            android:textSize="@dimen/_10sdp" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/ll_statement_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardElevation="@dimen/_3sdp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/_8sdp"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_weight="0.3"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:text="@string/selection"
                    android:textColor="@color/colorGrey"
                    android:textSize="@dimen/_10sdp" />

                <TextView
                    android:id="@+id/tv_odds_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/odds"
                    android:textColor="@color/colorGrey"
                    android:textSize="@dimen/_10sdp" />

                <TextView
                    android:id="@+id/tv_rate_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rate"
                    android:textColor="@color/colorGrey"
                    android:textSize="@dimen/_10sdp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stake"
                    android:textColor="@color/colorGrey"
                    android:textSize="@dimen/_10sdp" />

                <TextView
                    android:id="@+id/tv_run_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/run"
                    android:textColor="@color/colorGrey"
                    android:textSize="@dimen/_10sdp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/result"
                    android:textColor="@color/colorGrey"
                    android:textSize="@dimen/_10sdp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/type"
                    android:textColor="@color/colorGrey"
                    android:textSize="@dimen/_10sdp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/won_loss"
                    android:textColor="@color/colorGrey"
                    android:textSize="@dimen/_10sdp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pl"
                    android:textColor="@color/colorGrey"
                    android:textSize="@dimen/_10sdp" />

                <TextView
                    android:id="@+id/tv_dr_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dr"
                    android:textColor="@color/colorGrey"
                    android:textSize="@dimen/_10sdp" />

                <TextView
                    android:id="@+id/tv_cr_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cr"
                    android:textColor="@color/colorGrey"
                    android:textSize="@dimen/_10sdp" />

                <TextView
                    android:id="@+id/tv_net_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/net"
                    android:textColor="@color/colorGrey"
                    android:textSize="@dimen/_10sdp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_weight="0.7"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_selection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:textColor="@color/bgColor"
                    android:textSize="@dimen/_10sdp" />

                <TextView
                    android:id="@+id/tv_odds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/bgColor"
                    android:textSize="@dimen/_10sdp" />

                <TextView
                    android:id="@+id/tv_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/bgColor"
                    android:textSize="@dimen/_10sdp" />

                <TextView
                    android:id="@+id/tv_stake"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/bgColor"
                    android:textSize="@dimen/_10sdp" />

                <TextView
                    android:id="@+id/tv_run"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/bgColor"
                    android:textSize="@dimen/_10sdp" />

                <TextView
                    android:id="@+id/tv_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/bgColor"
                    android:textSize="@dimen/_10sdp" />

                <TextView
                    android:id="@+id/tv_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/bgColor"
                    android:textSize="@dimen/_10sdp" />

                <TextView
                    android:id="@+id/tv_won_loss"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/bgColor"
                    android:textSize="@dimen/_10sdp" />

                <TextView
                    android:id="@+id/tv_pl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/bgColor"
                    android:textSize="@dimen/_10sdp" />

                <TextView
                    android:id="@+id/tv_dr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/bgColor"
                    android:textSize="@dimen/_10sdp" />

                <TextView
                    android:id="@+id/tv_cr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/bgColor"
                    android:textSize="@dimen/_10sdp" />

                <TextView
                    android:id="@+id/tv_net"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/bgColor"
                    android:textSize="@dimen/_10sdp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>