<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.DepositActivity">

    <RelativeLayout
        android:id="@+id/rel_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/themeYellow"
        android:padding="@dimen/_10sdp">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            app:tint="@color/colorBlack" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/withdraw"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_12sdp"
            android:transitionName="withdraw_transition" />

    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_account_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_15sdp">

        <EditText
            android:id="@+id/edt_account_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/bank_account_no"
            android:singleLine="true"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorBlack"
            android:textSize="@dimen/_12sdp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_holder_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_15sdp">

        <EditText
            android:id="@+id/edt_holder_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/account_holder_name"
            android:singleLine="true"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorBlack"
            android:textSize="@dimen/_12sdp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_bank_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_15sdp">

        <EditText
            android:id="@+id/edt_bank_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/bank_name"
            android:singleLine="true"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorBlack"
            android:textSize="@dimen/_12sdp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_ifsc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_15sdp">

        <EditText
            android:id="@+id/edt_ifsc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/branch_ifsc"
            android:singleLine="true"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorBlack"
            android:textSize="@dimen/_12sdp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_mobile_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_15sdp">

        <EditText
            android:id="@+id/edt_mobile_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/mobile_number"
            android:inputType="number"
            android:singleLine="true"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorBlack"
            android:textSize="@dimen/_12sdp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp">

        <EditText
            android:id="@+id/edt_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/enter_withdrawal_amount"
            android:inputType="number"
            android:singleLine="true"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorBlack"
            android:textSize="@dimen/_12sdp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp">

        <EditText
            android:id="@+id/edt_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/description"
            android:singleLine="true"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorBlack"
            android:textSize="@dimen/_12sdp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_withdraw_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/curve_button"
        android:backgroundTint="@color/themeYellow"
        android:fontFamily="@font/montserrat_bold"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:text="@string/withdraw_request"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/_12sdp" />

</LinearLayout>